<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.user.currencyconverter.MainActivity">

    <TextView
        android:text="@string/ConvertTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:typeface="serif" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:id="@+id/radioGroupTo">

        <RadioButton
            android:text="@string/RadioButtonMYR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButtonMYR"
            android:layout_weight="1"
            android:checked="true"/>

        <RadioButton
            android:text="@string/RadioButtonSGD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/radioButtonSGD" />

    </RadioGroup>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:id="@+id/radioGroupFrom">

        <RadioButton
            android:text="@string/RadioButtonAUD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="23dp"
            android:id="@+id/radioButtonAUD"
            android:layout_weight="1"
            android:checked="true"/>

        <RadioButton
            android:text="@string/RadioButtonUSD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radioButtonSGD"
            android:layout_gravity="center_horizontal"
            android:layout_alignStart="@+id/radioButtonSGD"
            android:id="@+id/radioButtonUSD"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/RadioButtonNZD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radioButtonAUD"
            android:layout_gravity="center_horizontal"
            android:layout_alignStart="@+id/radioButtonAUD"
            android:id="@+id/radioButtonNZD"
            android:layout_weight="1" />

    </RadioGroup>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number|numberDecimal"
        android:ems="10"
        android:id="@+id/editText"
        android:contentDescription="Input amount"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        tools:background="@android:drawable/editbox_background_normal"
        android:hint="Input Amount"
        style="@style/Widget.AppCompat.EditText" />

    <Button
        android:text="@string/ButtonConvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonConvert"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/radioGroupTo"
        android:layout_toStartOf="@+id/textView2" />

    <Button
        android:text="@string/ButtonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonClear"
        android:layout_alignBaseline="@+id/buttonConvert"
        android:layout_alignBottom="@+id/buttonConvert"
        android:layout_toEndOf="@+id/textView2"
        android:onClick="clear"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewOutput"
        android:textAppearance="@android:style/TextAppearance"
        android:textSize="30sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="17dp"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/curreny"
        android:id="@+id/imageView2"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/textView2" />
</RelativeLayout>
